# Bookkeeping

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  logging_config.py  main.py  models.py  schemas.py  seed.py  services.py
backend/app/ai/: classifier.py
backend/app/routers/: accounts.py  approvals.py  reports.py  transactions.py
backend/tests/: conftest.py  test_api_flow.py  test_classifier.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/pages/: Dashboard.tsx  Reports.tsx  TransactionQueue.tsx
