[project]
name = "bookkeeping-control-tower"
version = "0.1.0"
description = "Enterprise AI-Assisted Bookkeeping Platform — core MVP backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear, comprehensions
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in argument defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# conftest forces DATABASE_URL before importing the app, so its imports follow
# a statement on purpose (E402).
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
